# whisper-bidec

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml
script/: format  lint  setup
tests/: Makefile  ngram_corpus.arpa  ngram_corpus.txt  ngram_symbols.txt  test_decode.py  test_ngram.py
whisper_bidec/: __init__.py  __main__.py  const.py  corpus.py  decode.py  logits_processor.py  ngram.py
