[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "whisper_bidec"
version     = "0.0.1"
license     = {text = "Apache-2.0"}
description = "Biased decoding for Whisper"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["whisper", "speech", "recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"
dependencies = [
    "kenlm",
    "transformers",
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "flake8==7.1.2",
    "mypy==1.14.1",
    "pylint==3.2.7",
    "pytest==8.3.5",
]

[project.urls]
"Source Code" = "http://github.com/home-assistant/hassil"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["whisper_bidec"]
exclude = ["tests", "tests.*"]
